# GlycemicGPT

./: .coderabbit.yaml  .env.example  .gitguardian.yaml  .gitignore  .release-please-changelog.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MEDICAL-DISCLAIMER.md  PRIVACY.md  README.md  ROADMAP.md  SPONSORS.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  funding.json  osv-scanner.toml
apps/api/: Dockerfile  THIRD_PARTY_LICENSES.md  pyproject.toml
apps/api/benchmarks/: __init__.py  __main__.py  clients.py  compare.py  harness_versions.json  scenario.py  suites.py
apps/api/benchmarks/core/: __init__.py  capability_matrix.py  judge.py  pricing.py  report.py  runner.py  scorers.py  verdict.py  version.py
apps/api/benchmarks/importer/: __init__.py  __main__.py  anonymize.py  db_source.py  models.py  scenario_builder.py  sources.py
apps/api/knowledge/: README.md  insulin-types.md
apps/api/migrations/: env.py
apps/api/migrations/versions/: 042_create_analytics_configs.py  044_create_plugin_declarations.py  046_display_labels_rearch.py  047_create_chat_messages.py  048_rag_infrastructure.py  050_knowledge_chunk_unique_hash.py  051_nightscout_connections.py  052_nightscout_translator.py  053_ai_max_response_tokens.py  054_ns_entry_object_id_cursor.py  055_forecast_snapshots.py  056_reset_disclaimer_for_v1_1.py  057_forecast_settings.py  058_drop_tandem_cloud_upload.py  059_tandem_sync_state.py  060_medtronic_connect_state.py  061_glooko_sync_state.py  062_glooko_consent_ack.py  063_pump_event_dedupe_hash.py  064_cgm_role.py  065_glooko_cgm_sync_enabled.py  066_create_food_records.py  067_create_common_foods.py  068_basal_injection_event_type.py  069_food_record_grounding.py  070_food_record_identity.py  071_food_record_audit_provenance.py  072_add_user_disclaimer_version.py  073_food_record_assumptions.py  073_user_glucose_unit.py  074_food_record_comorbidity.py  075_user_glucose_unit.py  076_glucose_unit_source.py  077_meal_intelligence_enabled.py
apps/api/src/: config.py  deployment_check.py  main.py  observability.py
apps/api/src/core/: connect_install_bundle.py  content_digest.py  disclaimer.py  medtronic_regions.py  security.py  tandem_regions.py  token_blacklist.py  trust.py  units.py
apps/api/src/middleware/: rate_limit.py
apps/api/src/models/: __init__.py  ai_provider.py  analytics_config.py  chat_message.py  common_food.py  device_status_snapshot.py  food_record.py  food_record_audit.py  forecast_settings.py  forecast_snapshot.py  glooko_sync_state.py  glucose.py  integration.py  knowledge_chunk.py  medtronic_connect_state.py  nightscout_connection.py  nightscout_profile_snapshot.py  pump_data.py  research_source.py  tandem_sync_state.py  user.py
apps/api/src/routers/: _meal_intelligence.py  ai.py  auth.py  caregivers.py  common_foods.py  disclaimer.py  food_records.py  glucose_stream.py  integrations.py  knowledge.py  nightscout.py  research.py  settings.py
apps/api/src/schemas/: ai_provider.py  analytics_config.py  auth.py  caregiver_dashboard.py  cgm.py  common_food.py  daily_brief.py  forecast.py  (+14 more)
apps/api/tests/: conftest.py  test_aggregate_stats.py  test_ai_provider.py  test_alembic_single_head.py  test_alert_notifier.py  test_alert_sse.py  test_analytics_config.py  test_brief_notifier.py  test_brief_scheduler.py  test_caregiver_dashboard.py  test_caregiver_invitations.py  test_carelink_client.py  test_carelink_csv.py  test_carelink_mapper.py  test_carelink_session.py  test_carelink_storage.py  test_carelink_sync.py  test_cgm_source.py  test_chat_history.py  test_connect_auth.py  test_connect_client.py  test_connect_endpoints.py  test_connect_helper_endpoints.py  test_connect_mapper.py  test_connect_pairing.py  test_connect_sync.py  test_correction_analysis.py  test_daily_brief.py  test_data_purge.py  test_deployment_check.py  test_diabetes_context.py  test_disclaimer.py  test_escalation_engine.py  test_food_records.py  test_forecast_endpoints.py  test_forecast_reader.py  test_forecast_snapshot_model.py  test_glooko_client.py  test_glooko_endpoints.py  test_glooko_mapper.py  (+54 more)
(+891 files in other folders)
