[project]
name = "glycemicgpt-api"
version = "0.9.0" # x-release-please-version
description = "GlycemicGPT FastAPI Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    # Security floor: starlette is transitive via fastapi (which allows the
    # 1.x line). <1.3.1 is vulnerable to GHSA-82w8-qh3p-5jfq (7.5 DoS, fixed
    # 1.3.1) and GHSA-jp82-jpqv-5vv3 (fixed 1.3.0); we floor at the fix and let
    # uv take the latest compatible release.
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.27.0",
    "pydantic[email]>=2.6.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Security floor: <0.0.31 is vulnerable to GHSA-5rvq-cxj2-64vf (HIGH),
    # GHSA-6jv3-5f52-599m, GHSA-v9pg-7xvm-68hf, GHSA-vffw-93wf-4j4q (all fixed by 0.0.31).
    "python-multipart>=0.0.31",
    "pydexcom>=0.2.0",
    "apscheduler>=3.10.0",
    "tconnectsync>=2.3.0",
    # tconnectsync.api.tandemsource imports requests_oidc.make_auth_code_session,
    # which only exists in requests-oidc>=0.5.0. Renovate's lock-file maintenance
    # has been silently downgrading to 0.4.x and breaking the build; this floor
    # blocks the regression. (Bumped to >=0.6.0 to match what we already have
    # installed and tested against.)
    "requests-oidc>=0.6.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "setuptools>=69.0.0,<82",  # tconnectsync needs pkg_resources, removed in setuptools 82
    "slowapi>=0.1.9",
    "fastembed>=0.4.0,<1.0",
    "pgvector>=0.3.0",
    "beautifulsoup4>=4.12.0",
    "sentry-sdk[fastapi]>=2.35.0",
    "pillow>=11.0.0",  # Food-photo decode + EXIF strip
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Force the transitive pyjwt (pulled in by tconnectsync) to a patched release.
# pyjwt 2.12.1 is flagged by PYSEC-2026-175/177/178/179 (fixed in 2.13.0); tconnectsync
# requires pyjwt with no upper bound, so this constraint just lifts the resolved version
# without changing our direct dependencies. We do not import pyjwt directly -- our own JWTs
# use python-jose[cryptography] with HS256.
#
# cryptography is transitive (python-jose[cryptography] and others); <48.0.1 is flagged by
# GHSA-537c-gmf6-5ccf (7.5). Floor it to the patched 48.x line without adding a direct
# dependency; the major 49.x bump is deferred to a dedicated dep-maintenance PR so this
# security patch doesn't ride a breaking crypto major (python-jose uses cryptography hazmat).
constraint-dependencies = ["pyjwt>=2.13.0", "cryptography>=48.0.1,<49"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "migrations/",
    ".venv/",
    "__pycache__/",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument (FastAPI Depends pattern)
    "B904",   # raise ... from err in exception handling
    "UP042",  # str, enum.Enum pattern (intentional for JSON serialization)
    "SIM102", # Nested if statements (sometimes more readable)
    "SIM105", # contextlib.suppress (try/except/pass is clearer)
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]  # Imports after settings override

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "integration: tests that hit a real external service. Skipped by default; opt in by setting the relevant *_TEST_URL env var (e.g. NIGHTSCOUT_TEST_URL).",
]

[tool.mypy]
python_version = "3.12"
strict = true
